use Integer.valueOf rather than new Integer
git-svn-id: https://svn.apache.org/repos/asf/maven/plugin-tools/trunk@1337728 13f79535-47bb-0310-9956-ffa450edef68